policygenerator/policy-sets/community/gatekeeper/input/container-deny-added-caps/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  creationTimestamp: null
  name: containerdenyaddedcaps
spec:
  crd:
    spec:
      names:
        kind: ContainerDenyAddedCaps
  targets:
    - libs:
        - |-
          package lib.core

          default is_gatekeeper = false

          is_gatekeeper {
            has_field(input, "review")
            has_field(input.review, "object")
          }

          resource = input.review.object {
            is_gatekeeper
          }

          resource = input {
            not is_gatekeeper
          }

          format(msg) = {"msg": msg}

          format_with_id(msg, id) = msg_fmt {
            msg_fmt := {
              "msg": sprintf("%s: %s", [id, msg]),
              "details": {"policyID": id},
            }
          }

          apiVersion = resource.apiVersion

          name = resource.metadata.name

          kind = resource.kind

          labels = resource.metadata.labels

          annotations = resource.metadata.annotations

          gv := split(apiVersion, "/")

          group = gv[0] {
            contains(apiVersion, "/")
          }

          group = "core" {
            not contains(apiVersion, "/")
          }

          version := gv[count(gv) - 1]

          has_field(obj, field) {
            not object.get(obj, field, "N_DEFINED") == "N_DEFINED"
          }

          missing_field(obj, field) {
            obj[field] == ""
          }

          missing_field(obj, field) {
            not has_field(obj, field)
          }
        - |-
          package lib.pods

          import data.lib.core

          default pod = false

          pod = core.resource.spec.template {
            pod_templates := ["daemonset", "deployment", "job", "replicaset", "replicationcontroller", "statefulset"]
            lower(core.kind) == pod_templates[_]
          }

          pod = core.resource {
            lower(core.kind) == "pod"
          }

          pod = core.resource.spec.jobTemplate.spec.template {
            lower(core.kind) == "cronjob"
          }

          containers[container] {
            keys = {"containers", "initContainers"}
            all_containers = [c | keys[k]; c = pod.spec[k][_]]
            container = all_containers[_]
          }

          volumes[volume] {
            volume = pod.spec.volumes[_]
          }
        - |-
          package lib.security

          dropped_capability(container, cap) {
            lower(container.securityContext.capabilities.drop[_]) == lower(cap)
          }

          dropped_capability(psp, cap) {
            lower(psp.spec.requiredDropCapabilities[_]) == lower(cap)
          }

          added_capability(container, cap) {
            lower(container.securityContext.capabilities.add[_]) == lower(cap)
          }

          added_capability(psp, cap) {
            lower(psp.spec.allowedCapabilities[_]) == lower(cap)
          }

          added_capability(psp, cap) {
            lower(psp.spec.defaultAddCapabilities[_]) == lower(cap)
          }
      rego: |-
        package container_deny_added_caps

        import data.lib.core
        import data.lib.pods
        import data.lib.security

        policyID := "P1001"

        violation[msg] {
          pods.containers[container]
          not container_dropped_all_capabilities(container)

          msg := core.format_with_id(sprintf("%s/%s/%s: Does not drop all capabilities", [core.kind, core.name, container.name]), policyID)
        }

        container_dropped_all_capabilities(container) {
          security.dropped_capability(container, "all")
        }
      target: admission.k8s.gatekeeper.sh
status: {}
